adjust footer logo

--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -94,7 +94,7 @@
               ## (e.g. a blog or marketing front-end) to provide a consistent
               ## user experience.  See the branding app for details.
               <!-- <img alt="organization logo" src="${footer['logo_image']}"> -->
-              <img alt="Netica logo" src="../images/smiley-face.jpg" width="125px"> 
+              <img alt="Netica logo" src="${static.url("images/smiley-face.jpg")}" width="125px"> 
             </a>
           </p>
         </div>
