--- a/themes/netica-theme/lms/templates/main.html
+++ b/themes/netica-theme/lms/templates/main.html
@@ -135,7 +135,7 @@ from pipeline_mako import render_require_js_path_overrides
   <%include file="widgets/segment-io.html" />
 
   <meta name="path_prefix" content="${EDX_ROOT_URL}">
-  
+
   <% google_site_verification_id = configuration_helpers.get_value('GOOGLE_SITE_VERIFICATION_ID', settings.GOOGLE_SITE_VERIFICATION_ID) %>
   % if google_site_verification_id:
     <meta name="google-site-verification" content="${google_site_verification_id}" />
@@ -167,6 +167,8 @@ from pipeline_mako import render_require_js_path_overrides
 % endif
 
 </head>
+
+/////////////////////////////////////////// BODY ///////////////////////////////////////////////////
 
 <body class="${static.dir_rtl()} <%block name='bodyclass'/> lang_${LANGUAGE_CODE}">
 
