--- a/themes/netica-theme/lms/templates/main.html
+++ b/themes/netica-theme/lms/templates/main.html
@@ -168,7 +168,7 @@ from pipeline_mako import render_require_js_path_overrides
 
 </head>
 
-/////////////////////////////////////////// BODY ///////////////////////////////////////////////////
+<!-- /////////////////////////////////////////// BODY /////////////////////////////////////////////////// -->
 
 <body class="${static.dir_rtl()} <%block name='bodyclass'/> lang_${LANGUAGE_CODE}">
 
