--- a/themes/netica-theme/lms/static/css/lms-main-v1.css
+++ b/themes/netica-theme/lms/static/css/lms-main-v1.css
@@ -28739,7 +28739,7 @@ body.error .back-button.is-disabled {
   width          : 100%;
   padding-bottom : 10px;
   overflow       : hidden;
-  border-top     : 3px solid #0075b4;
+  border-top     : 3px solid #0075b4 !important;
   background     : #fff;
   box-shadow     : 0 1px 5px 0 rgba(0,0,0,0.1);
   line-height    : 1.5;
