--- a/themes/netica-theme/lms/static/css/lms-main-v1.css
+++ b/themes/netica-theme/lms/static/css/lms-main-v1.css
@@ -7415,7 +7415,7 @@ input[type="submit"]:disabled {
   clear      : both;
   padding    : 25px 10px 30px 10px;
   border-top : 1px solid #c5c6c7;
-  background : #fff;
+  background : #7B8AD4 !important;
   box-shadow : 0 -1px 5px 0 rgba(0,0,0,0.1);
 }
 
