--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -49,7 +49,7 @@
             <div class="footer-about-openedx">
               <p>
                 <a href="${footer['openedx_link']['url']}">
-                  <img src="${footer['openedx_link']['image']}" alt="${footer['openedx_link']['title']}" width="140" />
+                  <img src="${static.url("images/open_edx_logo.png")}" alt="${footer['openedx_link']['title']}" />
                 </a>
               </p>
             </div>
