--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -11,7 +11,7 @@
 
 % if uses_bootstrap:
   <div class="container-fluid wrapper-footer">
-    <footer>
+    <footer style="background-color: #7B8AD4;">
       <div class="row">
         <div class="col-md-9">
           <nav class="navbar site-nav navbar-expand-sm" aria-label="${_('About')}">
