--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -10,8 +10,8 @@
 <%namespace name='static' file='static_content.html'/>
 
 % if uses_bootstrap:
-  <div class="container-fluid wrapper-footer">
-    <footer style="background-color: #7B8AD4;">
+  <div class="container-fluid wrapper-footer" style="background-color: #7B8AD4;">
+    <footer>
       <div class="row">
         <div class="col-md-9">
           <nav class="navbar site-nav navbar-expand-sm" aria-label="${_('About')}">
@@ -59,7 +59,7 @@
     </footer>
   </div>
 % else:
-  <div class="wrapper wrapper-footer">
+  <div class="wrapper wrapper-footer" style="background-color: #7B8AD4;">
     <footer id="footer-openedx" class="grid-container"
       ## When rendering the footer through the branding API,
       ## the direction may not be set on the parent element,
@@ -68,6 +68,23 @@
         dir=${bidi}
       % endif
     >
+
+      <div class="wrapper-logo">
+        <p>
+          <a href="/">
+            ## The default logo is a placeholder.
+            ## You can either replace this link entirely or update
+            ## the FOOTER_ORGANIZATION_IMAGE in Django settings.
+            ## If you customize FOOTER_ORGANIZATION_IMAGE, then the image
+            ## can be included in the footer on other sites
+            ## (e.g. a blog or marketing front-end) to provide a consistent
+            ## user experience.  See the branding app for details.
+            <!-- <img alt="organization logo" src="${footer['logo_image']}"> -->
+            <img alt="Netica logo" src="${static.url("images/netica_logo_blanco.png")}">
+          </a>
+        </p>
+      </div>
+
       <div class="colophon">
         <nav class="nav-colophon" aria-label="${_('About')}">
           <ol>
@@ -83,7 +100,7 @@
             <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
         % endif
 
-        <div class="wrapper-logo">
+        <!-- <div class="wrapper-logo">
           <p>
             <a href="/">
               ## The default logo is a placeholder.
@@ -93,11 +110,11 @@
               ## can be included in the footer on other sites
               ## (e.g. a blog or marketing front-end) to provide a consistent
               ## user experience.  See the branding app for details.
-              <!-- <img alt="organization logo" src="${footer['logo_image']}"> -->
+              <img alt="organization logo" src="${footer['logo_image']}">
               <img alt="Netica logo" src="${static.url("images/netica_logo_blanco.png")}">
             </a>
           </p>
-        </div>
+        </div> -->
 
         ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
         <p class="copyright">${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}</p>
@@ -122,7 +139,7 @@
       <div class="footer-about-openedx">
         <p>
           <a href="${footer['openedx_link']['url']}">
-            <img src="${footer['openedx_link']['image']}" alt="${footer['openedx_link']['title']}" width="140" />
+            <img src="${static.url("images/open_edx_logo.png")}" alt="${footer['openedx_link']['title']}" />
           </a>
         </p>
       </div>
