--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -92,7 +92,7 @@
               % for item_num, link in enumerate(footer['navigation_links'], start=1):
               <li class="nav-colophon-0${item_num}">
                 <a id="${link['name']}" href="${link['url']}"
-                 style="font-size: 14px; fontcolor: #1F0400;">${link['title']}</a>
+                 style="font-size: 14px;">${link['title']}</a>
               </li>
               % endfor
           </ol>
@@ -119,9 +119,9 @@
         </div> -->
 
         ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
-        <p class="copyright">${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}</p>
+        <p class="copyright" style="background-color: #000; color: #fff;">${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}</p>
 
-        <nav class="nav-legal" aria-label="${_('Legal')}">
+        <!-- <nav class="nav-legal" aria-label="${_('Legal')}">
           <ul>
             % for item_num, link in enumerate(footer['legal_links'], start=1):
               <li class="nav-legal-0${item_num}">
@@ -130,7 +130,7 @@
             % endfor
             <li><a href="${footer['edx_org_link']['url']}">${footer['edx_org_link']['text']}</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
 
       ## Please leave this link and use one of the logos provided
