footer background corrected

--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -60,7 +60,7 @@
   </div>
 % else:
   <div class="wrapper wrapper-footer"
-       style="background-color: #7F8BD7; height: 1.5em !important;">
+       style="background-color: #7F8BD7;">
     <footer id="footer-openedx" class="grid-container"
       ## When rendering the footer through the branding API,
       ## the direction may not be set on the parent element,
