--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -84,9 +84,14 @@
             <img alt="Netica logo" src="${static.url("images/netica_logo_blanco.png")}">
           </a>
         </p>
+        <p style="line-height: 16px;"><a href="#">Acerca de</a><br>
+          <a href="https://neticaweb.com">Contacto</a><br>
+          <a href="https://neticaweb.com">Noticias</a><br>
+          <a href="https://neticaweb.com">Política de privacidad</a><br>
+          <a href="https://neticaweb.com">Derechos de autor</a></p>
       </div>
 
-      <div class="colophon">
+      <!-- <div class="colophon">
         <nav class="nav-colophon" aria-label="${_('About')}">
           <ol style="display: block;">
               % for item_num, link in enumerate(footer['navigation_links'], start=1):
@@ -101,7 +106,7 @@
         % if context.get('include_language_selector', footer_language_selector_is_enabled()):
             <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
         % endif
-      </div>
+      </div> -->
         <!-- <div class="wrapper-logo">
           <p>
             <a href="/">
@@ -140,7 +145,7 @@
       % if not hide_openedx_link:
       <div class="footer-about-openedx">
         <p>
-          <a href="${footer['openedx_link']['url']}">
+          <a href="${footer['openedx_link']['url']}" style="line-height: 31.5px;">
             <img src="${static.url("images/open_edx_logo.png")}" alt="${footer['openedx_link']['title']}" />
           </a>
         </p>
@@ -151,7 +156,7 @@
 
   <div class="footer-legal-openedx">
     ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
-    <p class="copyright" style="background-color: #000; color: #fff;">${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}</p>
+    <p class="copyright" style="background-color: #000; color: #fff; font-size: 13px;">${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}</p>
   </div>
 % endif
 % if include_dependencies:
