added cursos to footer

--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -84,11 +84,12 @@
             <img alt="Netica logo" src="${static.url("images/netica_logo_blanco.png")}">
           </a>
         </p>
-        <p style="line-height: 16px;"><a href="#">Acerca de</a><br>
-          <a href="https://neticaweb.com">Contacto</a><br>
-          <a href="https://neticaweb.com">Noticias</a><br>
-          <a href="https://neticaweb.com">Política de privacidad</a><br>
-          <a href="https://neticaweb.com">Derechos de autor</a></p>
+        <p class="custom-colonphon" style="line-height: 16px; color: #000;">
+          <a href="https://neticaweb.com" style="{color: #000;}:hover {color: #fff}"> Acerca de </a><br>
+          <a href="https://neticaweb.com"> Contacto </a><br>
+          <a href="https://neticaweb.com"> Noticias </a><br>
+          <a href="https://neticaweb.com"> Política de privacidad </a><br>
+          <a href="https://neticaweb.com"> Derechos de autor </a></p>
       </div>
 
       <!-- <div class="colophon">
