--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -9,6 +9,8 @@
 <% footer = get_footer(is_secure=is_secure) %>
 <%namespace name='static' file='static_content.html'/>
 
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
 % if uses_bootstrap:
   <div class="container-fluid wrapper-footer" style="background-color: #7B8AD4;">
     <footer>
@@ -60,7 +62,7 @@
   </div>
 % else:
   <div class="wrapper wrapper-footer"
-       style="background-color: #7F8BD7;  display: grid;">
+       style="background-color: #7F8BD7;">
     <footer id="footer-openedx" class="grid-container"
       ## When rendering the footer through the branding API,
       ## the direction may not be set on the parent element,
@@ -68,6 +70,7 @@
       % if bidi:
         dir=${bidi}
       % endif
+      style="display: inline-grid;"
     >
 
       <div class="wrapper-logo" style="grid-column: 1 / 2;">
@@ -84,7 +87,10 @@
             <img alt="Netica logo" src="${static.url("images/netica_logo_blanco.png")}">
           </a>
         </p>
-        <p class="custom-colonphon" style="line-height: 14px; color: #000;">
+        <p class="custom-colonphon"
+           style="line-height: 14px;
+                  color: #000 !important;
+                  font-family: 'Poppins', sans-serif;">
           <a href="neticaweb.com"> Acerca de </a><br>
           <a href="https://neticaweb.com"> Contacto </a><br>
           <a href="https://neticaweb.com"> Noticias </a><br>
@@ -96,7 +102,8 @@
       <div class="custom-pages-footer" style="grid-column: 2 / 3;">
 	       <h6 style="font-size: 14px;
             margin-top: 20px;
-            margin-bottom: 15px;">
+            margin-bottom: 15px;
+            color: #000 !important;">
 		          <a href="#cursos" style="font-weight:bold;">Cursos</a>
 	       </h6>
 
@@ -183,15 +190,13 @@
     </footer>
   </div>
 
-  <div class="footer-legal-openedx">
+  <div class="footer-legal-openedx" style="margin-top: 2px; margin-bottom: 2px;">
     ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
     <p class="copyright"
        style=" background-color: #000;
                color: #fff;
                font-size: 10px;
-               font-weight: bold;
-               margin-top: 2px;
-               margin-bottom: 2px;">
+               font-weight: bold;">
       ${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}
     </p>
   </div>
