--- a/themes/netica-theme/lms/templates/main.html
+++ b/themes/netica-theme/lms/templates/main.html
@@ -166,6 +166,8 @@ from pipeline_mako import render_require_js_path_overrides
     </script>
 % endif
 
+<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
 </head>
 
 <!-- /////////////////////////////////////////// BODY /////////////////////////////////////////////////// -->
