--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -73,7 +73,7 @@
              grid-column-gap: 2em;"
     >
 
-      <div class="wrapper-logo" style="grid-column: 1 / 2;">
+      <div class="wrapper-logo" style="grid-column: 1;">
         <p>
           <a href="/">
             ## The default logo is a placeholder.
@@ -88,10 +88,9 @@
           </a>
         </p>
         <p class="custom-colonphon"
-           style="line-height: 14px;
-                  color: #000 !important;
-                  font-family: 'Poppins', sans-serif;">
-          <a href="neticaweb.com"> Acerca de </a><br>
+           style="line-height: 14px;">
+          <a href="https://neticaweb.com"
+             style="color: #000; font-family: 'Poppins', sans-serif;"> Acerca de </a><br>
           <a href="https://neticaweb.com"> Contacto </a><br>
           <a href="https://neticaweb.com"> Noticias </a><br>
           <a href="https://neticaweb.com"> Política de privacidad </a><br>
@@ -99,12 +98,11 @@
         </p>
       </div>
 
-      <div class="custom-pages-footer">
+      <div class="custom-pages-footer" style="grid-column: 2;">
 	       <h6 style="font-size: 14px;
             margin-top: 20px;
             margin-bottom: 15px;
-            color: #000 !important;
-            grid-column: 2 / 3;">
+            color: #000 !important;">
 		          <a href="#cursos" style="font-weight:bold;">Cursos</a>
 	       </h6>
 
@@ -119,9 +117,9 @@
 	       </div>
 
          <div class="col-lg-8">
-		         <p style="line-height: 16px; .tab-space{margin-left: 2.5em;}">
+		         <p style="line-height: 16px;">
                   <a href="#">Primaria intermedia</a><br>
-			            <a href="#" class="tab-space">Robótica</a><br>
+			            <a href="#" style="margin-left: 2.5em;"> Robótica</a><br>
 			            <a href="#" class="tab-space">Programación</a><br><br>
 			            <a href="#">Secundaria / Bachillerato</a><br>
 			            <a href="#" class="tab-space">Robótica</a><br>
@@ -193,7 +191,7 @@
     </footer>
   </div>
 
-  <div class="footer-legal-openedx" style="background-color: #000; height: 40px;">
+  <div class="footer-legal-openedx" style="background-color: #000; height: 35px; text-align: center;">
     ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
     <p class="copyright"
        style=" color: #fff;
