Grid applyed to all footer with font changes

--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -91,39 +91,54 @@
            style="line-height: 14px;">
           <a href="https://neticaweb.com"
              style="color: #000; font-family: 'Poppins', sans-serif;"> Acerca de </a><br>
-          <a href="https://neticaweb.com"> Contacto </a><br>
-          <a href="https://neticaweb.com"> Noticias </a><br>
-          <a href="https://neticaweb.com"> Política de privacidad </a><br>
-          <a href="https://neticaweb.com"> Derechos de autor </a>
+          <a href="https://neticaweb.com"
+             style="color: #000; font-family: 'Poppins', sans-serif;"> Contacto </a><br>
+          <a href="https://neticaweb.com"
+             style="color: #000; font-family: 'Poppins', sans-serif;"> Noticias </a><br>
+          <a href="https://neticaweb.com"
+             style="color: #000; font-family: 'Poppins', sans-serif;"> Política de privacidad </a><br>
+          <a href="https://neticaweb.com"
+             style="color: #000; font-family: 'Poppins', sans-serif;"> Derechos de autor </a>
         </p>
       </div>
 
       <div class="custom-pages-footer" style="grid-column: 2;">
 	       <h6 style="font-size: 14px;
             margin-top: 20px;
-            margin-bottom: 15px;
-            color: #000 !important;">
-		          <a href="#cursos" style="font-weight:bold;">Cursos</a>
+            margin-bottom: 15px;">
+		          <a href="#cursos"
+                 style="font-weight:bold; color: #000; font-family: 'Poppins', sans-serif;"> Cursos </a>
 	       </h6>
 
          <div class="col-lg-4">
 		         <p style="line-height: 16px;">
-                  <a href="#">Preescolar</a><br>
-			            <a href="#" class="tab-space">Robótica</a><br><br><br>
-			            <a href="#">Primaria inicial</a><br>
-			            <a href="#" class="tab-space">Robótica</a><br>
-			            <a href="#" class="tab-space">Programación</a>
+                  <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif;"> Preescolar </a><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br><br><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif;"> Primaria inicial </a><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Programación </a>
 		         </p>
 	       </div>
 
          <div class="col-lg-8">
 		         <p style="line-height: 16px;">
-                  <a href="#">Primaria intermedia</a><br>
-			            <a href="#" style="margin-left: 2.5em;"> Robótica</a><br>
-			            <a href="#" class="tab-space">Programación</a><br><br>
-			            <a href="#">Secundaria / Bachillerato</a><br>
-			            <a href="#" class="tab-space">Robótica</a><br>
-			            <a href="#" class="tab-space">Programación</a>
+                  <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif;"> Primaria intermedia </a><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Programación </a><br><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif;"> Secundaria / Bachillerato </a><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br>
+			            <a href="#"
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Programación </a>
 		         </p>
 	      </div>
      </div>
@@ -180,7 +195,7 @@
       ## through an API to partner sites (such as marketing sites or blogs),
       ## which are not technically powered by OpenEdX.
       % if not hide_openedx_link:
-      <div class="custom-footer-about-openedx">
+      <div class="custom-footer-about-openedx" style="grid-column: 3;">
         <p>
           <a href="${footer['openedx_link']['url']}" style="line-height: 31.5px;">
             <img src="${static.url("images/open_edx_logo.png")}" alt="${footer['openedx_link']['title']}" />
