--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -202,8 +202,9 @@
       % if not hide_openedx_link:
       <div class="custom-footer-about-openedx" style="grid-column: 3;">
         <p>
-          <a href="${footer['openedx_link']['url']}" style="line-height: 31.5px;">
-            <img src="${static.url("images/open_edx_logo.png")}" alt="${footer['openedx_link']['title']}" />
+          <a href="${footer['openedx_link']['url']}">
+            <img src="${static.url("images/open_edx_logo.png")}" alt="${footer['openedx_link']['title']}"
+                 style="max-width: 100%; height: auto; line-height: 31.5px;"/>
           </a>
         </p>
       </div>
@@ -211,13 +212,13 @@
     </footer>
   </div>
 
-  <div class="footer-legal-openedx" style="background-color: #000; height: 34px;">
+  <div class="footer-legal-openedx" style="background-color: #000; height: 31.5px;">
     ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
     <p class="copyright"
        style=" color: #fff;
                font-size: 10px;
                font-family: 'Poppins', sans-serif;
-               line-height: 34px">
+               line-height: 31.5px">
       ${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}
     </p>
   </div>
