Add line height on text

--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -93,15 +93,20 @@
         <p class="custom-colonphon"
            style="line-height: 14px;">
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif;"> Acerca de </a><br>
+             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             Acerca de </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif;"> Contacto </a><br>
+             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             Contacto </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif;"> Noticias </a><br>
+             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             Noticias </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif;"> Política de privacidad </a><br>
+             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             Política de privacidad </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif;"> Derechos de autor </a>
+             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             Derechos de autor </a>
         </p>
       </div>
 
@@ -121,32 +126,43 @@
          <div class="col-lg-4" style="grid-column: 1;">
 		         <p style="line-height: 16px;">
                   <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500;"> Preescolar </a><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; line-height: 16px;">
+                     Preescolar </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br><br><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     Robótica </a><br><br><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif;"> Primaria inicial </a><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; line-height: 16px;">
+                     Primaria inicial </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     Robótica </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Programación </a>
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     Programación </a>
 		         </p>
 	       </div>
 
          <div class="col-lg-8" style="grid-column: 2;">
 		         <p style="line-height: 16px;">
                   <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif;"> Primaria intermedia </a><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; line-height: 16px;">
+                     Primaria intermedia </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     Robótica </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Programación </a><br><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     Programación </a><br><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif;"> Secundaria / Bachillerato </a><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; line-height: 16px;">
+                     Secundaria / Bachillerato </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Robótica </a><br>
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     Robótica </a><br>
 			            <a href="#"
-                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em"> Programación </a>
+                     style="color: #000; font-family: 'Poppins', sans-serif; margin-left: 2.5em; line-height: 16px;">
+                     Programación </a>
 		         </p>
 	      </div>
      </div>
