--- a/themes/netica-theme/lms/templates/footer.html
+++ b/themes/netica-theme/lms/templates/footer.html
@@ -73,8 +73,7 @@
              grid-template-columns: 33.33%;
              grid-column-gap: 2em;
              padding-left: 30px;
-             padding-right: 30px;"
-    >
+             padding-right: 30px;">
 
       <div class="wrapper-logo" style="grid-column: 1;">
         <p>
@@ -93,19 +92,19 @@
         <p class="custom-colonphon"
            style="line-height: 14px;">
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             style="color: #000; font-family: 'Poppins'; font-size: 14px;">
              Acerca de </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Contacto </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Noticias </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Política de privacidad </a><br>
           <a href="https://neticaweb.com"
-             style="color: #000; font-family: 'Poppins', sans-serif; line-height: 14px;">
+             style="color: #000; font-family: 'Poppins', sans-serif; font-size: 14px;">
              Derechos de autor </a>
         </p>
       </div>
@@ -123,7 +122,7 @@
                  style="font-weight:bold; color: #000; font-family: 'Poppins', sans-serif;"> Cursos </a>
 	       </h6>
 
-         <div class="col-lg-4" style="grid-column: 1;">
+         <div class="col-lg-4" style="grid-column: 1; margin-left: 1em;">
 		         <p style="line-height: 16px;">
                   <a href="#"
                      style="color: #000; font-family: 'Poppins', sans-serif; font-weight: 500; line-height: 16px;">
